Try nbagg backend
Hi Alex, I figured I would make my email suggestion a pull request.

--- a/gw150914_snr.ipynb
+++ b/gw150914_snr.ipynb
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib nbagg\n",
     "import pylab\n",
     "# Import the functions we need for later!\n",
     "from pycbc.frame import read_frame\n",
