--- a/Make_waveform.ipynb
+++ b/Make_waveform.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib nbagg\n",
     "\n",
     "import pylab\n",
     "import numpy as np\n",
@@ -71,7 +71,6 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
     "\n",
     "import pylab\n",
     "import numpy as np\n",
