--- a/gw150914_look.ipynb
+++ b/gw150914_look.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib nbagg\n",
     "from pycbc.frame import read_frame\n",
     "from pycbc.filter import highpass_fir, lowpass_fir\n",
     "from pycbc.psd import welch, interpolate\n",
