--- a/gw150914_audio.ipynb
+++ b/gw150914_audio.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List to the merger converted to audio ###"
+    "### Listen to the merger converted to audio ###"
    ]
   },
   {
