--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [List to the merger converted to audio](gw150914_audio.ipynb) ###"
+    "### [Listen to the merger converted to audio](gw150914_audio.ipynb) ###"
    ]
   },
   {
