--- a/gw150914_audio.ipynb
+++ b/gw150914_audio.ipynb
@@ -39,7 +39,7 @@
     "frequency_shift = 300.0\n",
     "fdata = smooth.to_frequencyseries()\n",
     "fdata.roll(int(frequency_shift / fdata.delta_f))\n",
-    "processed = fdata.to_timeseries()\n",
+    "smooth = fdata.to_timeseries()\n",
     "\n",
     "#Take slice around signal\n",
     "smooth = smooth[len(smooth)/2 - 1500:len(smooth)/2 + 3000]\n",
