copy from azure

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PyCBC: Python Software to Study Gravitational Waves#\n",
     "\n",
-    "PyCBC is software developed by a collaboration of LIGO scientists. It is open source and freely available. We use PyCBC in the detection of gravitational waves from binary mergers such as GW150914. Below you will find links to examples that explore gravitational wave data, how we find potential signals, and learn about them. This notebook is interactive so feel free to modify yourself!\n",
+    "PyCBC is software developed by a collaboration of LIGO scientists. It is open source and freely available. We use PyCBC in the detection of gravitational waves from binary mergers such as GW150914. Below you will find links to examples that explore gravitational wave data, how we find potential signals, and learn about them. This notebook is interactive so feel free to modify yourself! Note that many of these are simplified for illustrative purposes. \n",
     "\n",
     " * Learn more about [PyCBC](https://ligo-cbc.github.io/)\n",
     " * Get a the complete LIGO PyCBC environment with our [docker images](http://ligo-cbc.github.io/pycbc/latest/html/docker.html)\n",
@@ -15,6 +15,20 @@
     "\n",
     "### [LOSC](https://losc.ligo.org/about/) ###\n",
     "LIGO makes data open to the public through the LIGO Open Science Center. You can download data used on these pages from there and much more!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GW170817: Investigate the first binary neutron star merger observed with gravitational waves! ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Estimate the mass of the inspiralling neutron stars and see the signal in the data](gw170817_mass_estimate.ipynb) ###"
    ]
   },
   {
@@ -44,6 +58,97 @@
    "source": [
     "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](gw150914_snr.ipynb) ###"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Estimate the mass of the black holes in the merger and subtract from the data](mass_estimate_subtract.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GW151226 ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](gw151226_snr.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LVT151012 ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](lvt151012_snr.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GW170104 ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [See the time frequency track of the signal in the data](gw170104_look.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Waveforms for Gravitational-wave Mergers ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Generate your first waveform here!](waveforms_start.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [See the effect of changing the sky location and orientation of a merger signal](waveform_skyloc_orientation.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Compare how similar waveforms are to each other](waveform_similarity.ipynb) ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating Simulated Noise ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Generate noise directly in the frequency domain](generate_noise_in_frequency_domain.ipynb) ###"
+   ]
   }
  ],
  "metadata": {
@@ -62,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
