--- a/gw150914_audio.ipynb
+++ b/gw150914_audio.ipynb
@@ -11,9 +11,67 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: lal in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages\n",
+      "Requirement already satisfied: numpy==1.13.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from lal)\n",
+      "Requirement already satisfied: pycbc in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages\n",
+      "Requirement already satisfied: decorator>=3.4.2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: kombine==0.8.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: emcee>=2.2.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: argparse>=1.3.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: matplotlib>=1.3.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: corner>=2.0.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pyRXP>=2.1.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pillow in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pycbc-glue-obsolete==1.1.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: h5py>=2.5 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: requests>=1.2.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: unittest2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: numpy>=1.6.4 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: scipy>=0.13.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: jinja2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: weave>=0.16.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: mpld3>=0.3 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: MarkupSafe>=0.9.2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from Mako>=1.0.1->pycbc)\n",
+      "Requirement already satisfied: python-dateutil in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: pytz in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: cycler in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,>=1.5.6 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: six in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from h5py>=2.5->pycbc)\n",
+      "Requirement already satisfied: traceback2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from unittest2->pycbc)\n",
+      "Requirement already satisfied: linecache2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from traceback2->unittest2->pycbc)\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 1005k  100 1005k    0     0  4612k      0 --:--:-- --:--:-- --:--:-- 4632k\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Set up the libraries we need and download the data\n",
+    "!curl -O -J https://raw.githubusercontent.com/ligo-cbc/binder/master/H-H1_LOSC_4_V2-1126259446-32.gwf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pycbc.frame import read_frame\n",
     "from pycbc.filter import highpass_fir, lowpass_fir\n",
@@ -50,7 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Download your audio file here!](gw150914_h1_chirp.wav) ###"
+    "### Downlod your audio file ###\n",
+    " 1. Click 'Data' in the menu above to find the 'Download...' option.\n",
+    " 2. Select and download gw150914_h1_chirp.wav"
    ]
   }
  ],
@@ -70,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
