--- a/index.ipynb
+++ b/index.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Estimate the mass of the inspiralling neutron stars and see the signal in the data](gw170817_mass_estimate.ipynb) ###"
+    "### [Estimate the mass of the inspiralling neutron stars and see the signal in the data](examples/gw170817_mass_estimate.ipynb) ###"
    ]
   },
   {
@@ -42,21 +42,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [See the signal in the data](gw150914_look.ipynb) ###"
+    "### [See the signal in the data](examples/gw150914_look.ipynb) ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Listen to the merger converted to audio](gw150914_audio.ipynb) ###"
+    "### [Listen to the merger converted to audio](examples/gw150914_audio.ipynb) ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](gw150914_snr.ipynb) ###"
+    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](examples/gw150914_snr.ipynb) ###"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](gw151226_snr.ipynb) ###"
+    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](examples/gw151226_snr.ipynb) ###"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](lvt151012_snr.ipynb) ###"
+    "### [Generate the estimated gravitational waveform and calculate the signal-to-noise](examples/lvt151012_snr.ipynb) ###"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [See the time frequency track of the signal in the data](gw170104_look.ipynb) ###"
+    "### [See the time frequency track of the signal in the data](examples/gw170104_look.ipynb) ###"
    ]
   },
   {
@@ -119,21 +119,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Generate your first waveform here!](waveforms_start.ipynb) ###"
+    "### [Generate your first waveform here!](examples/waveforms_start.ipynb) ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [See the effect of changing the sky location and orientation of a merger signal](waveform_skyloc_orientation.ipynb) ###"
+    "### [See the effect of changing the sky location and orientation of a merger signal](examples/waveform_skyloc_orientation.ipynb) ###"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Compare how similar waveforms are to each other](waveform_similarity.ipynb) ###"
+    "### [Compare how similar waveforms are to each other](examples/waveform_similarity.ipynb) ###"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Generate noise directly in the frequency domain](generate_noise_in_frequency_domain.ipynb) ###"
+    "### [Generate noise directly in the frequency domain](examples/generate_noise_in_frequency_domain.ipynb) ###"
    ]
   }
  ],
@@ -167,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
