update for azure

--- a/examples/waveform_skyloc_orientation.ipynb
+++ b/examples/waveform_skyloc_orientation.ipynb
@@ -9,6 +9,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install the software we need\n",
+    "!pip install lalsuite pycbc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
