--- a/examples/gw150914_snr.ipynb
+++ b/examples/gw150914_snr.ipynb
@@ -9,6 +9,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install the software we need\n",
+    "!pip install lalsuite pycbc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
