--- a/examples/mass_estimate_subtract.ipynb
+++ b/examples/mass_estimate_subtract.ipynb
@@ -10,6 +10,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: lalsuite in /home/nbuser/anaconda2_501/lib/python2.7/site-packages\n",
+      "Requirement already satisfied: pycbc in /home/nbuser/anaconda2_501/lib/python2.7/site-packages\n",
+      "Requirement already satisfied: numpy>=1.7 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from lalsuite)\n",
+      "Requirement already satisfied: scipy>=0.13.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: argparse>=1.3.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: astropy==2.0.3 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pyRXP>=2.1.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pycbc-glue-obsolete==1.1.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: mpld3>=0.3 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: matplotlib>=1.3.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: h5py>=2.5 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: corner>=2.0.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: jinja2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pillow in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: kombine>=0.8.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: weave>=0.16.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: decorator>=3.4.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: unittest2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: emcee==2.2.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: requests>=1.2.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc)\n",
+      "Requirement already satisfied: pytest>=2.8 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from astropy==2.0.3->pycbc)\n",
+      "Requirement already satisfied: six>=1.10 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: python-dateutil>=2.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: backports.functools_lru_cache in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: subprocess32 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: pytz in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
+      "Requirement already satisfied: MarkupSafe>=0.9.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from Mako>=1.0.1->pycbc)\n",
+      "Requirement already satisfied: olefile in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pillow->pycbc)\n",
+      "Requirement already satisfied: traceback2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from unittest2->pycbc)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc)\n",
+      "Requirement already satisfied: py>=1.4.33 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pytest>=2.8->astropy==2.0.3->pycbc)\n",
+      "Requirement already satisfied: setuptools in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pytest>=2.8->astropy==2.0.3->pycbc)\n",
+      "Requirement already satisfied: linecache2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from traceback2->unittest2->pycbc)\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 9.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install the software we need\n",
+    "!pip install lalsuite pycbc"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
