--- a/examples/gw170817_mass_estimate.ipynb
+++ b/examples/gw170817_mass_estimate.ipynb
@@ -113,7 +113,8 @@
     }
    ],
    "source": [
-    "!pip install lalsuite pycbc"
+    "import sys\n",
+    "!{sys.executable} -m pip install lalsuite pycbc"
    ]
   },
   {
