--- a/examples/gw170104_look.ipynb
+++ b/examples/gw170104_look.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "# Install the software we need\n",
-    "!pip install lalsuite pycbc"
+    "import sys\n",
+    "!{sys.executable} -m pip install lalsuite pycbc"
    ]
   },
   {
