--- a/examples/lvt151012_snr.ipynb
+++ b/examples/lvt151012_snr.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "# Install the software we need\n",
-    "!pip install lalsuite pycbc"
+    "import sys\n",
+    "!{sys.executable} -m pip install lalsuite pycbc"
    ]
   },
   {
