--- a/tutorial/3_WaveformMatchedFilter.ipynb
+++ b/tutorial/3_WaveformMatchedFilter.ipynb
@@ -103,7 +103,8 @@
     }
    ],
    "source": [
-    "!pip install lalsuite pycbc"
+    "import sys\n",
+    "!{sys.executable} -m pip install lalsuite pycbc"
    ]
   },
   {
@@ -726,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
