--- a/examples/mass_estimate_subtract.ipynb
+++ b/examples/mass_estimate_subtract.ipynb
@@ -67,7 +67,8 @@
    ],
    "source": [
     "# Install the software we need\n",
-    "!pip install lalsuite pycbc"
+    "import sys\n",
+    "!{sys.executable} -m pip install lalsuite pycbc"
    ]
   },
   {
