pin lalsuite version temporarily

--- a/examples/mass_estimate_subtract.ipynb
+++ b/examples/mass_estimate_subtract.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "# Install the software we need\n",
     "import sys\n",
-    "!{sys.executable} -m pip install lalsuite pycbc"
+    "!{sys.executable} -m pip install lalsuite=='6.48.1.dev20180620' pycbc"
    ]
   },
   {
