--- a/examples/generate_noise_in_frequency_domain.ipynb
+++ b/examples/generate_noise_in_frequency_domain.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install lalsuite pycbc"
+    "!{sys.executable} -m pip install lalsuite=='6.48.1.dev20180620' pycbc"
    ]
   },
   {
