--- a/examples/gw170817_mass_estimate.ipynb
+++ b/examples/gw170817_mass_estimate.ipynb
@@ -114,7 +114,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install lalsuite pycbc"
+    "!{sys.executable} -m pip install lalsuite=='6.48.1.dev20180620' pycbc"
    ]
   },
   {
