fix lalsuite links

--- a/tutorial/2_VisualizationSignalProcessing.ipynb
+++ b/tutorial/2_VisualizationSignalProcessing.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "#### Getting the software environment setup\n",
     "\n",
-    "PyCBC is installable through pip, but also relies on portions of the [LALSuite]() c-library. A bundled version of this suitable for use with PyCBC is also available on Mac / Linux through pip. These can be installed as follows within the notebook."
+    "PyCBC is installable through pip, but also relies on portions of the [LALSuite](git.ligo.org/lscsoft/lalsuite) c-library. A bundled version of this suitable for use with PyCBC is also available on Mac / Linux through pip. These can be installed as follows within the notebook."
    ]
   },
   {
