install ligo-common

--- a/examples/gw170104_look.ipynb
+++ b/examples/gw170104_look.ipynb
@@ -6,16 +6,16 @@
       "name": "python2"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 2
-      },
-      "file_extension": ".py",
       "mimetype": "text/x-python",
-      "name": "python",
       "nbconvert_exporter": "python",
+      "name": "python",
       "pygments_lexer": "ipython2",
-      "version": "2.7.14"
+      "version": "2.7.15",
+      "file_extension": ".py",
+      "codemirror_mode": {
+        "version": 2,
+        "name": "ipython"
+      }
     }
   },
   "nbformat_minor": 2,
@@ -23,7 +23,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": "import sys\n!{sys.executable} -m pip install pycbc lalsuite --no-cache-dir",
+      "source": "import sys\n!{sys.executable} -m pip install pycbc lalsuite ligo-common --no-cache-dir",
       "metadata": {
         "trusted": true
       },
