--- a/tutorial/inference_4_bbh_example/IntroToPyCBCInference.ipynb
+++ b/tutorial/inference_4_bbh_example/IntroToPyCBCInference.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Introduction to PyCBC Inference 2: Analyzing a gravitational wave\n",
-    "### Collin Capano"
+    "### Collin Capano and Alex Nitz"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "\n",
     "# This is needed to access the executables on sciserver. On a personal machine this should be ignore.\n",
     "path = %env PATH\n",
-    "%env PATH=$path:/home/idies/miniconda3/envs/py27/bin "
+    "%env PATH=$path:/home/idies/miniconda3/envs/py37/bin "
    ]
   },
   {
@@ -55,9 +55,12 @@
    "source": [
     "## BBH example\n",
     "\n",
-    "We will use the provided example configuration file [bbh_example.ini](bbh_example.ini). This is the configuration file you would need to analyze signals like GW150914.\n",
+    "To analyze a gravitational wave, we need to provide a prior, a model, and data settings in our configuration file. These settings can all be put into a single file, or split up into multiple files, all of which are provided via the `--config-file` option. In this example, we split the configuration up into 3 files:\n",
+    "  * [gw150914_like.ini](gw150914_like.ini): specifies the model we will use, and the parameters that will be varied and their priors. This is the configuration file you would use to analyze signals like GW150914.\n",
+    "  * [emcee_pt-gw150914_like.ini](emcee_pt-gw150914_like.ini): specifies sampler settings. In this case, we are using the `emcee_pt` sampler.\n",
+    "  * [data.ini](data.ini): specifies the settings for loading the gravitational-wave data.\n",
     "\n",
-    "In the following sections, we look at the various sections of the configuration file in detail."
+    "In the following sections, we look at the various sections of thes configuration files in detail."
    ]
   },
   {
@@ -78,9 +81,11 @@
     "\\begin{equation}\n",
     "\\left<a_i, \\, b_i\\right> = 4 \\Re \\sum_{k=k_0}^{N/2} \\frac{\\tilde{a}_i^{*}(k \\Delta f) \\tilde{b}_i(k \\Delta f)}{S^{(i)}_n(k\\Delta f)} \\Delta f.\n",
     "\\end{equation}\n",
-    "Here, $S_n^{(i)}$ is the power spectral density of the noise in the $i$th detector and $\\Delta f = 1/T$ is the frequency resolution. This is the discrete form of the matched filter (see Matt Pitkin's talk).\n",
+    "Here, $S_n^{(i)}$ is the power spectral density of the noise in the $i$th detector and $\\Delta f = 1/T$ is the frequency resolution. This is the discrete form of the matched filter.\n",
     "\n",
-    "As we see, the model requires a lower frequency cutoff for the inner product $f_0 = k_0 \\Delta f$. This is set for each detector by setting the `{detector}-low-frequency-cutoff` option where `{detector}` is the detector name."
+    "As we see, the model requires a lower frequency cutoff for the inner product $f_0 = k_0 \\Delta f$. This is set with the `low-frequency-cutoff` option, which we have set to 20.\n",
+    "\n",
+    "*Tip:* By setting the `low-frequency-cutoff` to a single value, we will use the same cutoff for all detectors. If you would like to use a different cutoff for each detector, set `low-frequency-cutoff = {DET1}:{F1} {DET2}:{F2} [...]`, where `{DETn}` is the name of the `n`-th detector (e.g., `H1`) and `{Fn}` is the frequency to use for detector `n`."
    ]
   },
   {
@@ -96,7 +101,7 @@
    "source": [
     "As with the Normal 2D example, we see that there is a `[variable_params]` section. This lists the names of all of the parameters we will be varying in the run. Now we see that there is also a `[static_params]` section. These are parameters that will be kept fixed throughout the run. In this example we have:\n",
     " * `approximant = IMRPhenomPv2`: this means that the waveform model we use will be IMRPhenomPv2\n",
-    " * `f_lower = 20`: this sets the starting frequency for the waveform generation to 20Hz. *This is separate from the low frequency cutoff of the inner product, which is set in the `[model]` section.*\n",
+    " * `f_lower = 20`: this sets the starting frequency for the waveform generation to 20Hz. *This is separate from the low frequency cutoff of the inner product, which is set in the `[model]` section. Generally, this number should be less-than-or-equal-to the `low-frequency-cutoff` in the `[model]` section.*\n",
     " * `f_ref = 20`: the \"reference\" frequency of the waveform.\n",
     "\n",
     "The `approximant` argument determines what type of waveform we will be generating. Since it is set to `IMRPhenomPv2`, we will be generating a CBC waveform."
@@ -131,7 +136,7 @@
    "metadata": {},
    "source": [
     "### Challenge:\n",
-    " * The configuration file is missing a prior for the coalescene time `tc`. We know that the coalescence time of GW150914 is approximately 1126259462.42 (GPS seconds). Set a uniform prior on `tc` equal to this time $\\pm$ 0.1 s."
+    " * The configuration file is missing a prior for the mass of the second object, `mass2`. Set a prior on `mass2` that is uniform in $[10,80)\\,\\mathrm{M}_\\odot$. The solution can be found [here](http://pycbc.org/pycbc/latest/html/inference/examples/bbh.html#setup-the-configuration-files)."
    ]
   },
   {
@@ -140,7 +145,7 @@
    "source": [
     "## The sampler\n",
     "\n",
-    "Here we are using the `emcee_pt` sampler. This is a parallel tempered sampler, so it requires a number of temperatures to be set. Note a few other differences from the analytic example here:\n",
+    "The sampler settings are in [emcee_pt-gw150914_like.ini](emcee_pt-gw150914_like.ini). Here we are using the `emcee_pt` sampler. This is a parallel tempered sampler, so it requires a number of temperatures to be set. Note a few other differences from the analytic example here:\n",
     "  * The `burn-in-test` is set to `nacl & max_posterior`.\n",
     "  * Instead of an `niterations` option, we have `effective-nsamples = 1000`.\n",
     "  * A checkpoint interval is set: `checkpoint-interval = 2000`\n",
@@ -191,13 +196,21 @@
    "source": [
     "## Data settings\n",
     "\n",
-    "Options for loading the gravitational wave data are set on the command line. See [run_bbh_example.sh](run_bbh_example.sh) for details.\n",
+    "The settings for loading the data are in [data.ini](data.ini). This contains a `[data]` section, which is read by the GaussianNoise model to figure out what data to load, and how to condition. Here is what each of the settings that we have does:\n",
+    " * `instruments`: This tells the code what detectors to analyze. Here, we've set it to `H1` and `L1`.\n",
+    " * `trigger-time`, `analysis-start-time` and `analysis-end-time`: The `analysis-(start|end)-time` options determine the time that will be analyzed. Notice that the start-time is `-6` and the end time is `2`. This is because these times are measured with respect to the `trigger-time` option. Here, we put an estimate of the GPS time when the binary black hole merger occurred (in a Geocentric reference frame). With these settings, our analyzed time will start 6 seconds before the merger time and end 2 seconds after.\n",
+    " * `psd-estimation`: This determines how we will estimate the PSD. By setting it to `median-mean`, the PSD will be analyzed from the data using a Welch-like method. Basically, the data is chopped up into semi-overlapping segments, an FFT is taken in each block, then the median is taken over all odd-numbered segments. The same process is repeated for the even-numbered segments. The two sets are then averaged to give the PSD.\n",
+    " * `psd-start-time` and `psd-end-time`: This defines the analysis block that is used for estimating the PSD. To get a good estimate, you generally want to use ~512s of data. Here, we use 512s centered on the trigger time.\n",
+    " * `psd-segment-length` and `psd-segment-stride`: These determine the size of each segment when doing the median-mean method, and how much each segment overlaps.\n",
+    " * `psd-inverse-length`: This truncates the inverse PSD in the time domain to be 4s long.\n",
+    " * `frame-files`: Specifies the gravitational-wave data (\"frame\") files to use.\n",
+    " * `channel-name`: The name of the channels in the frame files containing the gravitational-wave data to analyze.\n",
+    " * `sample-rate`: The sample rate we will use for the analysis. You want this to be atleast twice the maximum frequency of any possible waveform that will be generated by your prior. For BBH, 2048Hz is generally ok.\n",
+    " * `strain-high-pass`: Causes a high-pass filter to be applied to the data when it is first loaded, with the cutoff frequency (here) set to 15Hz. This is just to remove the large amplitude low-frequency noise, so as not to cause numerical overflow issues when calculating the likelihood. Generally, you want this to be a few Hz lower than the low-frequency-cutoff used in the model.\n",
+    " * `pad-data`: Adds an extra few seconds on to the data when loading. This is to avoid corruption issues from the `strain-high-pass` filter. The padded data are removed after the high-pass filter is applied, and before any FFTs are done.\n",
     "\n",
     "### Challenge:\n",
-    " * The data that will be analyzed is set by the `--gps-start-time` and `--gps-end-time` options. What will these be set to by the script? How much time is analyzed?\n",
-    " * The longest waveform admitted by the prior is ~6s long. So why is the analyzed time longer than 6 seconds? (Hint: Recall FFT wrap around.)\n",
-    " \n",
-    "*Note: in a future release, data options will be moved from the command line and into the config file.*"
+    " * Why did we use -6 and +2 for the analysis times for this analysis? When would we change these values, and why?"
    ]
   },
   {
@@ -321,9 +334,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7 (py37)",
    "language": "python",
-   "name": "python3"
+   "name": "py37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -335,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
