--- a/tutorial/4_ChisqSignificance.ipynb
+++ b/tutorial/4_ChisqSignificance.ipynb
@@ -148,7 +148,7 @@
     "    # resolving narrow lines becomes more difficult.\n",
     "    p = data[ifo].psd(4)\n",
     "    p = interpolate(p, data[ifo].delta_f)\n",
-    "    p = inverse_spectrum_truncation(p, 4 * data[ifo].sample_rate, low_frequency_cutoff=20.0)\n",
+    "    p = inverse_spectrum_truncation(p, int(4 * data[ifo].sample_rate), low_frequency_cutoff=20.0)\n",
     "    psd[ifo] = p\n",
     "    \n",
     "    pylab.plot(psd[ifo].sample_frequencies, psd[ifo], label=ifo)\n",
